# data-engineering-zoomcamp

./: .gitignore  README.md
pipeline/: Dockerfile  Notebook.ipynb  ingest_data.py
week_1_docker_postgres_terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
week_1_docker_postgres_terraform/docker/: command  docker-compose.yaml  ingest_data.py  pipeline.py
week_1_docker_postgres_terraform/homework_docker_sql/: Dockerfile  Untitled.ipynb  command  docker-compose.yaml  homework.md  homework_data_pipeline.py  main.py  pyproject.toml
week_1_docker_postgres_terraform/terraform/: .gitignore  main.tf  variables.tf
week_2_kestra/: Dockerfile  docker-compose.yaml  gcp-base64.txt  homework.md  homework2.md
week_3_data_warehouse/: .gitignore  DLT_upload_to_GCP.ipynb  homework3.md  load_yellow_taxi_data.py  main.py  pyproject.toml
week_4_dbt/: .gitignore  dbt_project.yml  homework_week4.md  load_fhv_data.py  load_taxi_data.py  lookup_download.py  packages.yml
week_4_dbt/models/staging/: sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
